--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/davidli3100/AdrenaLAN#readme",
   "dependencies": {
-    "express": "4.16.3"
+    "express": "4.16.3",
+    "path": "0.12.7"
   }
 }
