--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/davidli3100/AdrenaLAN#readme",
   "dependencies": {
     "express": "4.16.3",
+    "howler": "2.0.14",
     "path": "0.12.7"
   }
 }
